--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "@taufik-nurrohman/document": "^0.3.1",
-    "@taufik-nurrohman/event": "^0.3.1",
-    "@taufik-nurrohman/to": "^0.0.18"
+    "@taufik-nurrohman/document": "*",
+    "@taufik-nurrohman/event": "*",
+    "@taufik-nurrohman/to": "*"
   },
   "devDependencies": {
-    "@taufik-nurrohman/factory": "^1.0.8"
+    "@taufik-nurrohman/factory": "*"
   },
   "private": true,
   "scripts": {
